--- a/package.json
+++ b/package.json
@@ -33,10 +33,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
@@ -57,9 +56,10 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
+    "@craco/craco": "^7.1.0",
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
